--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
+	id 'java'
+	id 'application'
+	id 'maven-publish'
 	id 'org.springframework.boot' version '2.1.6.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id 'java'
 }
 
 group = 'com.waldecleber.globoplay'
@@ -14,20 +16,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-	implementation 'org.flywaydb:flyway-core'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-web-services'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.flywaydb:flyway-core:5.2.4'
 	implementation 'org.modelmapper:modelmapper:2.3.0'
+	implementation 'commons-io:commons-io:2.5'
+	implementation 'org.mockito:mockito-all:1.10.19'
+	implementation 'junit:junit:4.12'
 
 	runtimeOnly 'mysql:mysql-connector-java'
-
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+	compile 'org.springframework.boot:spring-boot-starter-actuator:2.4.0'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
 
-test {
-	useJUnitPlatform()
 }
