--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,15 +3,15 @@ server:
 
 spring:
   profiles:
-    active: prod
+    active: dev
     include: swagger
   datasource:
-    url: jdbc:mysql://mysqldb:3306/assinaturas?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/assinaturas?createDatabaseIfNotExist=true
     username: root
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
   rabbitmq:
-    host: rabbitmq
+    host: localhost
     port: 5672
     username: guest
     password: guest
@@ -20,9 +20,9 @@ spring:
     open-in-view: false
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
-    show-sql: false
+    show-sql: true
 
 
 info:
